2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-03-03  Mike Blumenkrantz (discomfitor/zmike)
        fix bug with watches involving filtering being too aggressive for removed/offlined devices

2011-05-16  Mike Blumenkrantz (discomfitor/zmike)
        fix lots of bugs with EEZE_UDEV_TYPE_DRIVE_* detection, also tighten up eeze_udev_find_unlisted_similar to be less permissive

2011-06-29  Mike Blumenkrantz (discomfitor/zmike)
        * fixed bug where EEZE_UDEV_EVENT_NONE would not match all events for watches
        * fixed segv when detecting removable drives
        * fixed bug where watches would not properly detect disk events