@@ -12,3 +12,6 @@
         * fixed bug where EEZE_UDEV_EVENT_NONE would not match all events for watches
         * fixed segv when detecting removable drives
         * fixed bug where watches would not properly detect disk events
+
+2011-08-01  Mike Blumenkrantz (discomfitor/zmike)
+        * added fix for battery/ac detection with very recent versions of udev
